--- a/todo_project/tasks/templates/add_task.html
+++ b/todo_project/tasks/templates/add_task.html
@@ -1,4 +1,3 @@
-<!-- tasks/templates/tasks/add_task.html -->
 {% extends 'base.html' %}
 
 {% block title %}Добавить задачу{% endblock %}
@@ -10,6 +9,10 @@
         <div class="form-group">
             <label for="id_description">Описание</label>
             <textarea class="form-control" id="id_description" name="description" rows="3" required></textarea>
+        </div>
+        <div class="form-group">
+            <label for="id_description_detail">Подробное описание</label>
+            <textarea class="form-control" id="id_description_detail" name="description_detail" rows="3"></textarea>
         </div>
         <div class="form-group">
             <label for="id_status">Статус</label>
