--- a/todo_project/tasks/templates/add_task.html
+++ b/todo_project/tasks/templates/add_task.html
@@ -1,3 +1,4 @@
+<!-- tasks/templates/tasks/add_task.html -->
 {% extends 'base.html' %}
 
 {% block title %}Добавить задачу{% endblock %}
@@ -6,26 +7,7 @@
     <h1>Добавить задачу</h1>
     <form method="post">
         {% csrf_token %}
-        <div class="form-group">
-            <label for="id_description">Описание</label>
-            <textarea class="form-control" id="id_description" name="description" rows="3" required></textarea>
-        </div>
-        <div class="form-group">
-            <label for="id_description_detail">Подробное описание</label>
-            <textarea class="form-control" id="id_description_detail" name="description_detail" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="id_status">Статус</label>
-            <select class="form-control" id="id_status" name="status" required>
-                <option value="new">Новая</option>
-                <option value="in_progress">В процессе</option>
-                <option value="done">Сделано</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="id_due_date">Дата выполнения (YYYY-mm-dd)</label>
-            <input type="text" class="form-control" id="id_due_date" name="due_date" placeholder="YYYY-mm-dd">
-        </div>
+        {% include 'tasks/task_form.html' %}
         <button type="submit" class="btn btn-primary">Добавить</button>
     </form>
 {% endblock %}
